Services/network/traefik/dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.zlaya.tech`)
      kind: Rule
      middlewares:
        - name: oidc-auth
          namespace: traefik
        - name: default-headers 
          namespace: default
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: zlayatech-production-tls
